--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "node bin/www",
     "devStart": "nodemon bin/www"
   },
   "dependencies": {
